// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorklistItem Component Renders an WorklistItem component 1`] = `
<TouchableOpacity
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#ffffffff",
      "flexDirection": "row",
      "height": 100,
      "justifyContent": "flex-start",
      "marginBottom": 2,
      "paddingHorizontal": 15,
      "paddingVertical": 5,
    }
  }
  testID="btnCard"
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flex": 1,
        "height": 100,
        "justifyContent": "space-evenly",
      }
    }
  >
    <Text
      style={
        {
          "color": "#d938ab",
          "fontSize": 12,
          "fontWeight": "bold",
        }
      }
    >
      [missing "en.EXCEPTION.NIL_PICK" translation]
    </Text>
    <Text
      style={
        {
          "fontSize": 12,
        }
      }
    >
      Test
    </Text>
    <Text
      style={
        {
          "color": "#616161",
          "fontSize": 12,
        }
      }
    >
      1234
    </Text>
    <View
      style={
        {
          "flexDirection": "row",
        }
      }
    />
  </View>
</TouchableOpacity>
`;

exports[`WorklistItem Component Renders an WorklistItem component with both pending badges 1`] = `
<TouchableOpacity
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#ffffffff",
      "flexDirection": "row",
      "height": 100,
      "justifyContent": "flex-start",
      "marginBottom": 2,
      "paddingHorizontal": 15,
      "paddingVertical": 5,
    }
  }
  testID="btnCard"
>
  <ImageWrapper
    countryCode="MX"
    imageStyle={
      {
        "marginRight": 15,
      }
    }
    itemNumber={1234}
    tokenIsWaiting={false}
  />
  <View
    style={
      {
        "alignItems": "flex-start",
        "flex": 1,
        "height": 100,
        "justifyContent": "space-evenly",
      }
    }
  >
    <Text
      style={
        {
          "color": "#d938ab",
          "fontSize": 12,
          "fontWeight": "bold",
        }
      }
    >
      [missing "en.EXCEPTION.NIL_PICK" translation]
    </Text>
    <Text
      style={
        {
          "fontSize": 12,
        }
      }
    >
      Test
    </Text>
    <Text
      style={
        {
          "color": "#616161",
          "fontSize": 12,
        }
      }
    >
      1234
    </Text>
    <View
      style={
        {
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "backgroundColor": "#e0e0e0",
            "borderColor": "#eeeeee",
            "borderRadius": 4,
            "borderWidth": 1,
            "fontSize": 11,
            "marginRight": 10,
            "marginVertical": 5,
            "paddingHorizontal": 8,
            "paddingVertical": 5,
          }
        }
      >
        [missing "en.WORKLIST.PENDING_PICK" translation]
      </Text>
      <Text
        style={
          {
            "backgroundColor": "#ECDDC6",
            "borderColor": "#eeeeee",
            "borderRadius": 4,
            "borderWidth": 1,
            "fontSize": 11,
            "marginVertical": 5,
            "paddingHorizontal": 8,
            "paddingVertical": 5,
          }
        }
      >
        [missing "en.ITEM.PENDING_MGR_APPROVAL" translation]
      </Text>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`WorklistItem Component Renders an WorklistItem component with image 1`] = `
<TouchableOpacity
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#ffffffff",
      "flexDirection": "row",
      "height": 100,
      "justifyContent": "flex-start",
      "marginBottom": 2,
      "paddingHorizontal": 15,
      "paddingVertical": 5,
    }
  }
  testID="btnCard"
>
  <ImageWrapper
    countryCode="MX"
    imageStyle={
      {
        "marginRight": 15,
      }
    }
    itemNumber={1234}
    tokenIsWaiting={false}
  />
  <View
    style={
      {
        "alignItems": "flex-start",
        "flex": 1,
        "height": 100,
        "justifyContent": "space-evenly",
      }
    }
  >
    <Text
      style={
        {
          "color": "#d938ab",
          "fontSize": 12,
          "fontWeight": "bold",
        }
      }
    >
      [missing "en.EXCEPTION.NIL_PICK" translation]
    </Text>
    <Text
      style={
        {
          "fontSize": 12,
        }
      }
    >
      Test
    </Text>
    <Text
      style={
        {
          "color": "#616161",
          "fontSize": 12,
        }
      }
    >
      1234
    </Text>
    <View
      style={
        {
          "flexDirection": "row",
        }
      }
    />
  </View>
</TouchableOpacity>
`;

exports[`WorklistItem Component Renders an WorklistItem component with pending approval badge 1`] = `
<TouchableOpacity
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#ffffffff",
      "flexDirection": "row",
      "height": 100,
      "justifyContent": "flex-start",
      "marginBottom": 2,
      "paddingHorizontal": 15,
      "paddingVertical": 5,
    }
  }
  testID="btnCard"
>
  <ImageWrapper
    countryCode="MX"
    imageStyle={
      {
        "marginRight": 15,
      }
    }
    itemNumber={1234}
    tokenIsWaiting={false}
  />
  <View
    style={
      {
        "alignItems": "flex-start",
        "flex": 1,
        "height": 100,
        "justifyContent": "space-evenly",
      }
    }
  >
    <Text
      style={
        {
          "color": "#d938ab",
          "fontSize": 12,
          "fontWeight": "bold",
        }
      }
    >
      [missing "en.EXCEPTION.NIL_PICK" translation]
    </Text>
    <Text
      style={
        {
          "fontSize": 12,
        }
      }
    >
      Test
    </Text>
    <Text
      style={
        {
          "color": "#616161",
          "fontSize": 12,
        }
      }
    >
      1234
    </Text>
    <View
      style={
        {
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "backgroundColor": "#ECDDC6",
            "borderColor": "#eeeeee",
            "borderRadius": 4,
            "borderWidth": 1,
            "fontSize": 11,
            "marginVertical": 5,
            "paddingHorizontal": 8,
            "paddingVertical": 5,
          }
        }
      >
        [missing "en.ITEM.PENDING_MGR_APPROVAL" translation]
      </Text>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`WorklistItem Component Renders an WorklistItem component with pending pick badge 1`] = `
<TouchableOpacity
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#ffffffff",
      "flexDirection": "row",
      "height": 100,
      "justifyContent": "flex-start",
      "marginBottom": 2,
      "paddingHorizontal": 15,
      "paddingVertical": 5,
    }
  }
  testID="btnCard"
>
  <ImageWrapper
    countryCode="MX"
    imageStyle={
      {
        "marginRight": 15,
      }
    }
    itemNumber={1234}
    tokenIsWaiting={false}
  />
  <View
    style={
      {
        "alignItems": "flex-start",
        "flex": 1,
        "height": 100,
        "justifyContent": "space-evenly",
      }
    }
  >
    <Text
      style={
        {
          "color": "#d938ab",
          "fontSize": 12,
          "fontWeight": "bold",
        }
      }
    >
      [missing "en.EXCEPTION.NIL_PICK" translation]
    </Text>
    <Text
      style={
        {
          "fontSize": 12,
        }
      }
    >
      Test
    </Text>
    <Text
      style={
        {
          "color": "#616161",
          "fontSize": 12,
        }
      }
    >
      1234
    </Text>
    <View
      style={
        {
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "backgroundColor": "#e0e0e0",
            "borderColor": "#eeeeee",
            "borderRadius": 4,
            "borderWidth": 1,
            "fontSize": 11,
            "marginRight": 10,
            "marginVertical": 5,
            "paddingHorizontal": 8,
            "paddingVertical": 5,
          }
        }
      >
        [missing "en.WORKLIST.PENDING_PICK" translation]
      </Text>
    </View>
  </View>
</TouchableOpacity>
`;
